--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -31,6 +31,38 @@
                 font-weight: 500;
                 gap: 24px;
                 font-family: "Montserrat",sans-serif;
+
+                .user{
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+                    cursor: pointer;
+                    position: relative;
+                
+
+                img{
+                    width: 32px;
+                    height: 32px;
+                    border-radius: 50%;
+                    object-fit: cover;
+                }
+
+                .options{
+                    position: absolute;
+                    top: 50px;
+                    right: 0;
+                    padding: 20px;
+                    background-color: white;
+                    border-radius: 10px ;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 10px;
+                    border: 1px solid lightgray;
+                    color: gray;
+                    width: 200px;
+                    font-weight: 300; 
+                }
+            }
                 button{
                     color: white;
                         padding: 10px 20px;
