--- a/src/pages/messages/Messages.scss
+++ b/src/pages/messages/Messages.scss
@@ -9,15 +9,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-        
-            button{
-                background-color: #1dbf73;
-                color: white;
-                font-weight: 500;
-                border: none;
-                padding: 10px;
-                cursor: pointer;    
-            }
+    
         }
 
         table{
@@ -25,26 +17,32 @@
 
 
             tr{
-                height: 50px;
+                height: 100px;
 
                 th{
                     text-align: left;
                 }
             
                 td{
-                    .image{
-                        width: 50px;
-                        height: 25px;
-                        object-fit: cover;
-                    }
-                    .delete{
-                        width: 20px;
-                        cursor:  pointer;
-                    }
+                    padding: 10px;
 
+                    &:first-child{
+                        font-weight: 500;
+                    }
+                    &:nth-child(2),&:nth-child(3){
+                        color: gray;
+                    }
                 }
 
-                &:nth-child(even){
+                button{
+                    background-color: #1dbf73;
+                    color:white;
+                    padding: 10px;
+                    border:none;
+                    cursor: pointer;
+                }
+
+                &.active{
                     background-color: #1dbf730f;
                 }
             }
